--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,8 @@
-span {
-  padding: 5px;
+body {
+  background-color: red;
+  font-family: "helvetica neue";
+  font-size: 40px;
+  font-weight: bold;
 }
+
+/*# sourceMappingURL=styles.css.map */
