--- a/client/styles.css
+++ b/client/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: red;
+  background-color: blue;
   font-family: "helvetica neue";
   font-size: 40px;
   font-weight: bold;
